@@ -12,6 +12,8 @@ Client library:
 - Clients now close their socket after sending DISCONNECT.
 - Python client now contains its version number.
 
+Clients:
+- Add --ciphers to allow specifying which TLS ciphers to support.
 
 1.2 - 20130708
 ==============
